# formal.prac1

./: README.md  description
code_coverage/report/: index-sort-f.html  index.html
code_coverage/report/7/: index-sort-f.html  index.html  iostream.func-sort-c.html  new.func-sort-c.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html
code_coverage/report/7/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.gcov.html  deque.tcc.func-sort-c.html  index-sort-l.html  index.html  ios_base.h.func.html  ios_base.h.gcov.html  move.h.func-sort-c.html  ptr_traits.h.gcov.html  stl_construct.h.func-sort-c.html  stl_construct.h.gcov.html  stl_deque.h.func-sort-c.html  stl_iterator.h.func.html  stl_iterator_base_funcs.h.gcov.html  stl_iterator_base_types.h.func-sort-c.html  stl_iterator_base_types.h.gcov.html  stl_uninitialized.h.func-sort-c.html  stl_uninitialized.h.func.html  stl_uninitialized.h.gcov.html  unique_ptr.h.gcov.html  vector.tcc.func.html
code_coverage/report/7/ext/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  index-sort-f.html  index-sort-l.html  index.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  string_conversions.h.func-sort-c.html  string_conversions.h.gcov.html
code_coverage/report/home/mira318/formal.prac1/source/: index-sort-l.html  index.html  (+3 more)
source/: CMakeLists.txt  main_test.cpp  solution.cpp  test.cpp
(+11 files in other folders)
